<resources>
    <string name="app_name">OpenToDo</string>
    <string name="todo_input">Enter here please</string>
    <string name="todo_add">+</string>
    <string name="todo_remove">-</string>
    <string name="remove_button_description">Remove button for ToDo\'s</string>
    <string name="add_new_todo">Add new todo</string>
    <string name="alert_dialog_hint_text">ToDo title</string>
    <string name="add_button_text">Add</string>
    <string name="clear_all_todos_text">clear all todo\'s</string>
    <string name="alert_dialog_note">Add a note here</string>
    <string name="content_description_priority_high">!!!</string>
    <string name="content_description_priority_mid">!!</string>
    <string name="content_description_priority_low">!</string>
    <string name="content_description_menu">Opens the menu</string>
    <string name="about_1">Made with </string>
    <string name="about_2">by Liam Schäpers</string>
    <string name="about_3">in Germany</string>
    <string name="about_license">©Mozilla Public License 2.0</string>
    <string name="close_button">Close</string>
</resources>
