<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#263238"
    tools:context=".AboutMenu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        tools:text="@string/about_1"
        android:layout_gravity="center"
        android:id="@+id/about_tv_1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        tools:text="@string/about_2"
        android:layout_gravity="center"
        android:id="@+id/about_tv_2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        tools:text="@string/about_3"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:id="@+id/about_tv_3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        tools:text="@string/about_license"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:id="@+id/about_tv_4"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="25dp"
        android:id="@+id/close_button_about_menu"
        android:text="@string/close_button"/>

</LinearLayout>