<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="#263238"
    android:orientation="vertical">

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/alert_dialog_hint_text"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="15dp"
        android:textColorHint="#FFFFFF"
        android:id="@+id/todo_input_edit_text"
        android:inputType="textCapSentences"/>

    <View
        android:layout_width="250dp"
        android:layout_height="2dp"
        android:background="@drawable/rounded_splitting_line"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/alert_dialog_note"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="15dp"
        android:textColorHint="#FFFFFF"
        android:id="@+id/todo_edit_note"
        android:maxLines="3"
        android:inputType="textCapSentences|textMultiLine"/>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button_text"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_button"
        android:id="@+id/dialog_add_todo"/>

</LinearLayout>